--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,21 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Gembool';
+    src: url('./assets/font/Gembool.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Professor';
+    src: url('./assets/font/Professor.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
+
+
 $blue: #1193cd;
 
 
