--- a/src/style/Form.scss
+++ b/src/style/Form.scss
@@ -1,5 +1,7 @@
 #myForm{
     font-family: 'KG';
+    font-size: 60px;
+
 }
 
 label{
@@ -7,11 +9,12 @@ label{
     margin-bottom: 10vh;
     color: white;
     font-weight: lighter;
-    font-size: xx-large;
+    font-size: 60px;
 }
 
 .name{
     margin-top: 6vh;
+    font-size: 60px;
 }
 
 #name{
