--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,3 +1,24 @@
 h1 {
-  font-family: "Funny";
+  font-family: "Shitzu";
+  font-weight: lighter;
+  color: white;
+  text-transform: uppercase;
+  font-size: 64px;
+  margin-top: 4vw;
+  margin-bottom: 2vh;
+}
+
+#buttonNav {
+  width: 8vw;
+  height: 6.5vh;
+  font-family: "KG";
+  display: flex;
+  flex-direction: row;
+  border-radius: 5px;
+  font-size: larger;
+  margin-bottom: 5vh;
+}
+#buttonNav img {
+  width: 2vw;
+  margin-top: 0.5vh;
 }/*# sourceMappingURL=Header.css.map */
